builds/tests/380/data/attachments/d5faa6d8bd3f940a.txt
2026-07-18 04:04:52,853 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-07-18 04:04:52,853 INFO     yoyo.migrations —  - applying step 0
2026-07-18 04:04:52,853 INFO     yoyo.migrations —  - applying step 1
2026-07-18 04:04:52,853 INFO     yoyo.migrations —  - applying step 2
2026-07-18 04:04:52,854 INFO     yoyo.migrations —  - applying step 3
2026-07-18 04:04:52,854 INFO     yoyo.migrations —  - applying step 4
2026-07-18 04:04:52,854 INFO     yoyo.migrations —  - applying step 5
2026-07-18 04:04:52,854 INFO     yoyo.migrations —  - applying step 6
2026-07-18 04:04:52,854 INFO     yoyo.migrations —  - applying step 7
2026-07-18 04:04:52,855 INFO     yoyo.migrations —  - applying step 8
2026-07-18 04:04:52,855 INFO     yoyo.migrations —  - applying step 9
2026-07-18 04:04:52,855 INFO     yoyo.migrations —  - applying step 10
2026-07-18 04:04:52,855 INFO     yoyo.migrations —  - applying step 11
2026-07-18 04:04:52,856 INFO     yoyo.migrations —  - applying step 12
2026-07-18 04:04:52,856 INFO     yoyo.migrations —  - applying step 13
2026-07-18 04:04:52,856 INFO     yoyo.migrations —  - applying step 14
2026-07-18 04:04:52,856 INFO     yoyo.migrations —  - applying step 15
2026-07-18 04:04:52,857 INFO     yoyo.migrations —  - applying step 16
2026-07-18 04:04:52,857 INFO     yoyo.migrations —  - applying step 17
2026-07-18 04:04:52,857 INFO     yoyo.migrations —  - applying step 18
2026-07-18 04:04:52,857 INFO     yoyo.migrations —  - applying step 19
2026-07-18 04:04:52,858 INFO     yoyo.migrations —  - applying step 20
2026-07-18 04:04:52,858 INFO     yoyo.migrations —  - applying step 21
2026-07-18 04:04:52,858 INFO     yoyo.migrations —  - applying step 22
2026-07-18 04:04:52,858 INFO     yoyo.migrations —  - applying step 23
2026-07-18 04:04:52,859 INFO     yoyo.migrations —  - applying step 24
2026-07-18 04:04:52,859 INFO     yoyo.migrations —  - applying step 25
2026-07-18 04:04:52,859 INFO     yoyo.migrations —  - applying step 26
2026-07-18 04:04:52,859 INFO     yoyo.migrations —  - applying step 27
2026-07-18 04:04:52,859 INFO     yoyo.migrations —  - applying step 28
2026-07-18 04:04:52,860 INFO     yoyo.migrations —  - applying step 29
2026-07-18 04:04:52,860 INFO     yoyo.migrations —  - applying step 30
2026-07-18 04:04:52,860 INFO     yoyo.migrations —  - applying step 31
2026-07-18 04:04:52,860 INFO     yoyo.migrations —  - applying step 32
2026-07-18 04:04:52,860 INFO     yoyo.migrations —  - applying step 33
2026-07-18 04:04:52,861 INFO     yoyo.migrations —  - applying step 34
2026-07-18 04:04:52,861 INFO     yoyo.migrations —  - applying step 35
2026-07-18 04:04:52,863 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-07-18 04:04:52,870 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-07-18 04:04:52,872 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/asyncio/threads.py", line 26, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 541, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
